Added more lines of code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
  <img src="https://pbs.twimg.com/profile_images/1590090429344669696/Y54zHh4G_400x400.jpg" alt="Martin's Profile" srcset="">
  <h1>John Martin</h1>
+ <p>Student at <a href="https://www.bme.hu/?language=en">Budapest University of Technology and Economics</a>in Budapest </p>
     
 </body>
 </html>
