added more files

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <title>John Martin' Website</title>
 </head>
 <body>
- <img src="https://pbs.twimg.com/profile_images/1590090429344669696/Y54zHh4G_400x400.jpg" alt="Martin's Profile" srcset="">
+ <img src="https://pbs.twimg.com/profile_images/1590090429344669696/Y54zHh4G_400x400.jpg"/a alt="Martin's Profile" srcset="">
  <h1>John Martin</h1>
- <p>Student at <a href="https://www.bme.hu/?language=en">Budapest University of Technology and Economics</a>in Budapest </p>
+ <b></b>
+ <p>Student at <a href="https://www.bme.hu/?language=en">Budapest University of Technology and Economics</a> in Budapest </p>
+ <h3>My hobbies</h3>
+ <p>I have a lot of <a href="hobbies.html">hobbies</a> </p>
+<b></b>
+<p> <a href="contact.html">Contact</a> me</p>
+<p>Budapest, Hungary</p>
     
 </body>
 </html>
