Added more lines of code

--- a/contact.html
+++ b/contact.html
@@ -11,5 +11,18 @@
     <p>email: martinogumo@gmail.com</p>
     <p>+36 205839293</p>
     <p><a href="https://twitter.com/Martin1_Real">Twitter</a></p>
+    <hr>
+    <p><em>Subscribe to our updates?</em></p>
+
+    <form action="mailto:martin.ogumo@icloud.com">
+        <label for="Your email">Your name</label>
+        <input type="text" name ="Your name" "value">
+        <br>
+        <label for="Your email">Your email</label>
+        <input type="email" name = "email"value"><br>
+        <label for="">Your message</label><br>
+        <textarea name="Your message" id="" cols="30" rows="10"></textarea><br>
+        <input type="submit"><br>
+    </form>
 </body>
 </html>
