--- a/index.html
+++ b/index.html
@@ -5,15 +5,42 @@
     <title>John Martin' Website</title>
 </head>
 <body>
- <img src="https://pbs.twimg.com/profile_images/1590090429344669696/Y54zHh4G_400x400.jpg"/a alt="Martin's Profile" srcset="">
- <h1>John Martin</h1>
- <b></b>
- <p>Student at <a href="https://www.bme.hu/?language=en">Budapest University of Technology and Economics</a> in Budapest </p>
- <h3>My hobbies</h3>
+    <table cellspacing ="10">
+        <tr>
+        <td><img src ="https://pbs.twimg.com/profile_images/1590090429344669696/Y54zHh4G_400x400.jpg"/a alt="Martin's Profile" srcset=""></td>
+        <td><h1>John Martin</h1>
+            <b></b>
+            <p><h2> Student at <a href="https://www.bme.hu/?language=en">Budapest University of Technology and Economics</a> in Budapest</h2> </p>
+        <p><h3><em>BSc ELectrical Engineering</em></h3></p>
+    </td>
+        </tr>
+    </table>  
+ <hr>
+ 
+ <h3><em>Hobbies</em></h3>
  <p>I have a lot of <a href="hobbies.html">hobbies</a> </p>
 <b></b>
 <p> <a href="contact.html">Contact</a> me</p>
-<p>Budapest, Hungary</p>
-    
+<hr>
+<h3><em>Skills</em></h3>
+<table cellspacing ="10">
+    <tr>
+        <td>C++</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+
+    </tr>
+    <tr>
+        <td>C</td>
+        <td>⭐️⭐️⭐️⭐️</td>
+
+    </tr>
+    <tr>
+        <td>Assembly</td>
+        <td>⭐️⭐️⭐️</td>
+
+    </tr>
+</table>
+
+
 </body>
 </html>
