added different image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing ="10">
         <tr>
-        <td><img src ="https://pbs.twimg.com/profile_images/1590090429344669696/Y54zHh4G_400x400.jpg"/a alt="Martin's Profile" srcset=""></td>
+        <td><img src ="profile.jpg" width="200" height="200"/a alt="Martin's Profile" srcset=""></td>
         <td><h1>John Martin</h1>
             <b></b>
             <p><h2> Student at <a href="https://www.bme.hu/?language=en">Budapest University of Technology and Economics</a> in Budapest</h2> </p>
