added CSS files

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
 </head>
+<link rel="stylesheet" href="CSS/styles.css">
 <body>
     <h3>Contact details</h3>
     <p>email: martinogumo@gmail.com</p>
