--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>John Martin' Website</title>
 </head>
-<body>
+<link rel="stylesheet" href="CSS/styles.css">
+<body> 
     <table cellspacing ="10">
         <tr>
         <td><img src ="profile.jpg" width="200" height="200"/a alt="Martin's Profile" srcset=""></td>
