--- a/hobbies.html
+++ b/hobbies.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Hobbies</title>
 </head>
+<link rel="stylesheet" href="CSS/styles.css">
 <body>
     <h2>These are my hobbies</h2>
     <ul>
