--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,8 @@
         <td><img src ="profile.jpg" width="200" height="200"/a alt="Martin's Profile" srcset=""></td>
         <td><h1>John Martin</h1>
             <b></b>
-            <p><h2> Student at <a href="https://www.bme.hu/?language=en">Budapest University of Technology and Economics</a> in Budapest</h2> </p>
+            <p> Student at <a href="https://www.bme.hu/?language=en">Budapest University of Technology and Economics</a> in Budapest </p> 
+            <p>Just trying to get my website up and running🤪</p>
         <p><h3><em>BSc ELectrical Engineering</em></h3></p>
     </td>
         </tr>
