added a line of code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <td><h1>John Martin</h1>
             <b></b>
             <p> Student at <a href="https://www.bme.hu/?language=en">Budapest University of Technology and Economics</a> in Budapest </p> 
-            <p>Just trying to get my website up and running🤪</p>
+            <p>Just like everything on earth, this website is always under continuous construction</p>
         <p><h3><em>BSc ELectrical Engineering</em></h3></p>
     </td>
         </tr>
